# cheri-grpc-demo

./: CMakeLists.txt  LICENSE  README.md  blue.h  blue_service.cc  ping_client.cc  ping_server.cc  policy.c  red.h  red_service.cc  redblue.h  redblue_client.cc  redblue_server.cc  run-ping-test.sh  run-qps-benchmark.sh
bench/: CMakeLists.txt  jail-hook.sh.in  packages.sh  qps-runner.sh  run-qps.sh  runner.sh
bench/nginx/: bootstrap.sh  nginx.conf  nginx64.conf  nginx64cb.conf  run.sh  wrk-msglimit-report.lua  wrk-report.lua
bench/nginx/rps/: random_102400b  random_10240b  random_1024b  random_512b
bench/qps/: bootstrap.sh  policy.c  policy.txt  run-qps.sh  run.sh
bench/qps/scenarios/: gen_msglimit_scenarios.py  scenario_dump_cpp_generic_async_streaming_ping_pong_insecure.json  scenario_dump_cpp_generic_async_streaming_ping_pong_insecure_msglimit.json  scenario_dump_cpp_generic_async_streaming_ping_pong_insecure_msglimit_msglimit_msglimit.json  scenario_dump_cpp_generic_async_streaming_ping_pong_secure.json  scenario_dump_cpp_generic_async_streaming_ping_pong_secure_msglimit.json  scenario_dump_cpp_generic_async_streaming_ping_pong_secure_msglimit_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_1channel_1MBmsg_insecure.json  scenario_dump_cpp_generic_async_streaming_qps_1channel_1MBmsg_insecure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_1channel_1MBmsg_secure.json  scenario_dump_cpp_generic_async_streaming_qps_1channel_1MBmsg_secure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_one_server_core_insecure.json  scenario_dump_cpp_generic_async_streaming_qps_one_server_core_insecure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_one_server_core_insecure_msglimit_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_one_server_core_secure.json  scenario_dump_cpp_generic_async_streaming_qps_one_server_core_secure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_one_server_core_secure_msglimit_msglimit_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_100mps_insecure.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_100mps_insecure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_100mps_insecure_msglimit_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_100mps_secure.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_100mps_secure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_10mps_insecure.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_10mps_insecure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_10mps_insecure_msglimit_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_10mps_secure.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_10mps_secure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_1cq_insecure.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_1cq_insecure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_1cq_secure.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_1cq_secure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_1cq_secure_msglimit_msglimit_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_1mps_insecure.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_1mps_insecure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_1mps_insecure_msglimit_msglimit_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_1mps_secure.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_1mps_secure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_32mps_insecure.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_32mps_insecure_msglimit.json  scenario_dump_cpp_generic_async_streaming_qps_unconstrained_32mps_insecure_msglimit_msglimit.json  (+2467 more)
proto/: blue.proto  red.proto  redblue.proto  test.proto
